--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -13,10 +13,14 @@
   "about": "Sobre mi",
   "presentation": "Desarrollador de software, aplicaciones web y moviles. Me gusta vivir experiencias diferentes en paises diferentes. Actualmente de vuelta en Europa desde Tokyo, disfrutando de una nueva cultura y conociendo el mundo del desarrollo de software en ese pais.",
   "languages": "Idiomas",
-  "spanish": "<strong>Español:</strong> Nativo",
-  "english": "<strong>Ingles:</strong> Fluido. Certificado de inglés avanzado por la Universidad de Cambridge (C2). TOEFL iBT Test.",
-  "french": "<strong>Frances:</strong> Básico.",
-  "japanese": "<strong>Japones:</strong> Principiante!",
+  "spanish": "Español:",
+  "spanishInfo": " Nativo",
+  "english": "Inglés:",
+  "englishInfo": " Fluido. Certificado de inglés avanzado por la Universidad de Cambridge (C2). TOEFL iBT Test.",
+  "french": "Francés:",
+  "frenchInfo": " Básico.",
+  "japanese": "Japonés:",
+  "japaneseInfo": " Principiante!",
   "projects": "Proyectos",
   "infoProjects": "Ya que todos mis proyectos importantes han sido para uso privado no puedo compartir su codigo. Actualmente estoy en proceso de crear algunos proyectos propios, espero tener cosas importantes que compartir pronto!",
   "touch": "Ponte en contacto",
