--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -13,10 +13,14 @@
   "about": "About me",
   "presentation": "Software developer - Frontend, Backend and Mobile Apps. I love to live different experiences in different countries. Currently back in Europe from Tokyo, enjoying a new culture and getting to know the software developing ways in that country.",
   "languages": "Languages",
-  "spanish": "<strong>Spanish:</strong> Native",
-  "english": "<strong>English:</strong> Fluent. Cambridge Certificate in Advanced English (C2). TOEFL iBT Test.",
-  "french": "<strong>French:</strong> Basic.",
-  "japanese": "<strong>Japanese:</strong> Beginner!",
+  "spanish": "Spanish:",
+  "spanishInfo": "Native",
+  "english": "English:",
+  "englishInfo": " Fluent. Cambridge Certificate in Advanced English (C2). TOEFL iBT Test.",
+  "french": "French:",
+  "frenchInfo": " Basic.",
+  "japanese": "Japanese:",
+  "japaneseInfo": " Beginner!",
   "projects": "Projects",
   "infoProjects": "Since all my important proyects are privately own, I am not allowed to share the code. Currently on the process of creating some personal proyects for my github account, I hope I can share some of them in no time!",
   "touch": "Get in touch",
